--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
     <head>
         <style>
             .wrapper {
-                height: 100vh;
+                align-items: center;
+                display: flex;
+                flex-wrap: wrap;
+                height: 100vh;                
+                justify-content: center;
+
             }
 
             .box {
