--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
                 align-items: center;
                 justify-content: center;
                 flex-wrap: wrap;
+                align-content: center;
             }
 
             .box {
