--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
         <style>
             .wrapper {
                 height: 100vh;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                flex-wrap: wrap;
+                align-content: center;
             }
 
             .box {
